--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ div.topbar
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	display: inline-block;
+	/* display: inline-block; */
+	display: flex;
+  flex-direction: row;
 	z-index: 15;
 	position:fixed;
 	width: 100%;
@@ -48,7 +50,8 @@ div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	display: inline-block;
+	flex: auto;
+	/* display: inline-block; */
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
