--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ div.content
 	display: inline-block;
 	min-height: 500px;
 }
+.topbar {
+	display: flex;
+  flex-direction: row;
+	flex-wrap: wrap;
+}
 div.topbar
 {
 	-moz-user-select: none;
@@ -27,9 +32,6 @@ div.topbar
 	-o-user-select: none;
 	unselectable: on;
 	/* display: inline-block; */
-	display: flex;
-  flex-direction: row;
-	flex-wrap: wrap;
 	z-index: 15;
 	position:fixed;
 	width: 100%;
@@ -46,13 +48,14 @@ div.topspace
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
-
+.maplink {
+	flex: auto;
+	flex-wrap: wrap;
+}
 div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	flex: auto;
-	flex-wrap: wrap;
 	/* display: inline-block; */
 	text-align: center;
 	border-style: solid;
