--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ div.content
 	display: inline-block;
 	min-height: 500px;
 }
-.topbar {
+#topbar {
 	display: flex;
   flex-direction: row;
 	flex-wrap: wrap;
@@ -31,7 +31,7 @@ div.topbar
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	/* display: inline-block; */
+	display: inline-flex;
 	z-index: 15;
 	position:fixed;
 	width: 100%;
@@ -48,7 +48,7 @@ div.topspace
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
-.maplink {
+#maplink {
 	flex: auto;
 	flex-wrap: wrap;
 }
@@ -56,7 +56,7 @@ div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	/* display: inline-block; */
+	display: inline-flex;
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
