--- a/style.css
+++ b/style.css
@@ -9,29 +9,23 @@ body
 }
 div.content
 {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
 	display: inline-block;
 	min-height: 500px;
 }
-#topbar {
-	display: flex;
-  flex-direction: row;
-	flex-wrap: wrap;
-}
 div.topbar
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	display: inline-flex;
 	z-index: 15;
 	position:fixed;
 	width: 100%;
@@ -48,15 +42,12 @@ div.topspace
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
-#maplink {
-	flex: auto;
-	flex-wrap: wrap;
-}
+
 div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	display: inline-flex;
+	display: inline-block;
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
@@ -104,7 +95,7 @@ div.toptitle
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 7pt;
-
+	
 }
 div.topupdatedate
 {
@@ -278,9 +269,9 @@ districts4{
 	z-index:4;
 }
 #tooltiptext{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -288,9 +279,9 @@ districts4{
 	display: inline-block;
 }
 #tooltipControls{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -298,9 +289,9 @@ districts4{
 	display: inline-block;
 }
 #tooltipControlsButtonCycle{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -313,9 +304,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonEnter{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -328,9 +319,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonCancel{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -355,9 +346,9 @@ background-repeat: no-repeat;
 
 #overlay
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -373,9 +364,9 @@ background-repeat: no-repeat;
 }
 #overlay2
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -391,9 +382,9 @@ background-repeat: no-repeat;
 }
 #overlay3
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -409,9 +400,9 @@ background-repeat: no-repeat;
 }
 #overlay4
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -541,15 +532,15 @@ div.markerUIbuttonGreen
 	cursor: pointer;
 	display: none;
 }
-div.content
+div.content 
 {
 float:left;
 }
 
 #sidebar {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -563,9 +554,9 @@ float:left;
 	padding-left: 20px;
 }
 #sidebarMarkerlist {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -576,9 +567,9 @@ float:left;
 	padding-top: 20px;
 }
 #sidebarDestinationTypelist {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -588,9 +579,9 @@ float:left;
 	padding-top: 20px;
 }
 #pathfindingSettings {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -606,7 +597,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003300;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 select.mpcost {
 background-repeat:no-repeat;
@@ -614,7 +605,7 @@ background-position:bottom left;
    border: 1px solid #00FFFF;
    background-color: #003333;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 
 
@@ -625,7 +616,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003333;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 #customText {
 	background-color: #333333;
