--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ div.topbar
 	-o-user-select: none;
 	unselectable: on;
 	z-index: 15;
-	position:fixed;
+	position:relative;
 	width: auto;
-	min-width: 1500px;
+	min-width: 2000px;
 	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
