--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ div.topbar
 	unselectable: on;
 	z-index: 15;
 	position:fixed;
+	display:flex;
 	flex-wrap: wrap;
 	width: 100%;
 	min-width: 1500px;
@@ -48,7 +49,7 @@ div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	display: inline-block;
+	display: inline-flex;
 	flex-wrap: wrap;
 	text-align: center;
 	border-style: solid;
