--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ div.maplink
 {
 	cursor: pointer;
 	height: 20;
-	display: inline-flex;
+	display: flex;
 	flex-wrap: wrap;
 	text-align: center;
 	border-style: solid;
