Doing stuff I think

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@media only screen and (max-width: 600px) {
+	div.topbar {
+		z-index: 15;
+		position:fixed;
+		width: 100%;
+		min-width: 1500px;
+		height: 35;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 18pt;
+		background-color: rgba(0,0,0,0.7);
+	}
+}
 body
 {
 	cursor: crosshair;
@@ -9,9 +21,9 @@ body
 }
 div.content
 {
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -20,9 +32,9 @@ div.content
 }
 div.topbar
 {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -95,7 +107,7 @@ div.toptitle
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 7pt;
-	
+
 }
 div.topupdatedate
 {
@@ -269,9 +281,9 @@ districts4{
 	z-index:4;
 }
 #tooltiptext{
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -279,9 +291,9 @@ districts4{
 	display: inline-block;
 }
 #tooltipControls{
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -289,9 +301,9 @@ districts4{
 	display: inline-block;
 }
 #tooltipControlsButtonCycle{
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -304,9 +316,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonEnter{
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -319,9 +331,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonCancel{
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -346,9 +358,9 @@ background-repeat: no-repeat;
 
 #overlay
 {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -364,9 +376,9 @@ background-repeat: no-repeat;
 }
 #overlay2
 {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -382,9 +394,9 @@ background-repeat: no-repeat;
 }
 #overlay3
 {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -400,9 +412,9 @@ background-repeat: no-repeat;
 }
 #overlay4
 {
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -532,15 +544,15 @@ div.markerUIbuttonGreen
 	cursor: pointer;
 	display: none;
 }
-div.content 
+div.content
 {
 float:left;
 }
 
 #sidebar {
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -554,9 +566,9 @@ float:left;
 	padding-left: 20px;
 }
 #sidebarMarkerlist {
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -567,9 +579,9 @@ float:left;
 	padding-top: 20px;
 }
 #sidebarDestinationTypelist {
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -579,9 +591,9 @@ float:left;
 	padding-top: 20px;
 }
 #pathfindingSettings {
--moz-user-select: none; 
-	-webkit-user-select: none; 
-	-ms-user-select: none; 
+-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -597,7 +609,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003300;
  	border-radius: 3px;
-   color: white; 
+   color: white;
 }
 select.mpcost {
 background-repeat:no-repeat;
@@ -605,7 +617,7 @@ background-position:bottom left;
    border: 1px solid #00FFFF;
    background-color: #003333;
  	border-radius: 3px;
-   color: white; 
+   color: white;
 }
 
 
@@ -616,7 +628,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003333;
  	border-radius: 3px;
-   color: white; 
+   color: white;
 }
 #customText {
 	background-color: #333333;
