--- a/style.css
+++ b/style.css
@@ -9,6 +9,21 @@
 		font-size: 18pt;
 		background-color: rgba(0,0,0,0.7);
 	}
+	div.maplink
+	{
+		cursor: pointer;
+		height: 20;
+		display: inline-block;
+		text-align: center;
+		border-style: solid;
+		border-width: 1px;
+		border-radius: 3px;
+		padding-left: 5px;
+		padding-right: 5px;
+		vertical-align: middle;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 10pt;
+	}
 }
 body
 {
