--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 600px) {
 	div.topbar {
 		z-index: 15;
-		width: 100%;
+		width: auto;
 		min-width: 1500px;
 		height: 35;
 		font-family: Verdana, Arial, Helvetica, sans-serif;
