--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 1000px) {
 	div.topbar {
 		display:flex;
+		position:relative;
 		z-index: 15;
 		width: auto;
 		min-width: 1500px;
