--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @media only screen and (max-width: 1000px) {
 	div.topbar {
-		-webkit-flex-wrap: wrap;
+		display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 		z-index: 15;
 		width: 100%;
 		min-width: 1500px;
