--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     -webkit-flex-wrap: wrap;
     display: flex;
     flex-wrap: wrap;
+		position:relative;
 		z-index: 15;
-		width: 100%;
+		width: auto;
 		min-width: 1500px;
 		height: 35;
 		font-family: Verdana, Arial, Helvetica, sans-serif;
