--- a/test.css
+++ b/test.css
@@ -32,6 +32,7 @@ body
 	display: inline-flex;
 	text-align: center;
 	border-style: solid;
+	float:left;
 	border-width: 1px;
 	border-radius: 4px;
 	padding-left: 5px;
