--- a/test.css
+++ b/test.css
@@ -16,8 +16,8 @@ body
 	-o-user-select: none;
 	unselectable:on;
 	z-index: 15;
-	display:inline-flex;
-	position:fixed;
+	display: -webkit-inline-flex;
+	position: fixed;
 	width: 100%;
 	min-width: 1500px;
 	height: 35;
@@ -29,10 +29,9 @@ body
 {
 	cursor: pointer;
 	height: 20;
-	display: inline-flex;
+	display: -webkit-inline-flex;
 	text-align: center;
 	border-style: solid;
-	float:left;
 	border-width: 1px;
 	border-radius: 4px;
 	padding-left: 5px;
