--- a/test.css
+++ b/test.css
@@ -17,7 +17,7 @@ body
 	unselectable:on;
 	z-index: 15;
 	display: -webkit-inline-flex;
-	-webkit-flex-direction: row;
+	-webkit-flex-direction: row-reverse;
 	position: fixed;
 	width: 100%;
 	min-width: 1500px;
@@ -31,7 +31,7 @@ body
 	cursor: pointer;
 	height: 20;
 	display: -webkit-inline-flex;
-	-webkit-flex-direction: row
+	-webkit-flex-direction: row-reverse;
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
