--- a/test.css
+++ b/test.css
@@ -31,7 +31,8 @@ body
 	cursor: pointer;
 	height: 20;
 	display: -webkit-inline-flex;
-	-webkit-flex-direction: row-reverse;
+	-webkit-flex-direction: row;
+	float: left;
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
