--- a/test.css
+++ b/test.css
@@ -18,6 +18,7 @@ body
 	z-index: 15;
 	display: -apple-inline-flex;
 	-apple-flex-direction: row;
+	-apple-flex-wrap: wrap;
 	position: fixed;
 	width: 100%;
 	min-width: 1500px;
