--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ div.topbar
 	unselectable: on;
 	z-index: 15;
 	position:fixed;
-	width: 100%;
-	min-width: 1500px;
+	width: auto;
+	min-width: 500px;
 	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
