--- a/style.css
+++ b/style.css
@@ -1,19 +1,34 @@
-@media only screen and (max-width: 1000px) {
-	div.topbar {
-		cursor: pointer;
-		float: left;
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+	div.topbar
+	{
+		-moz-user-select: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-o-user-select: none;
+		unselectable: on;
 		z-index: 15;
+		position:fixed;
 		width: auto;
-		min-width: 1500px;
+		min-width: 500px;
 		height: 35;
 		font-family: Verdana, Arial, Helvetica, sans-serif;
 		font-size: 18pt;
 		background-color: rgba(0,0,0,0.7);
 	}
+	div.topspace
+	{
+		width: 100%;
+		height: 35;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 18pt;
+	}
+
 	div.maplink
 	{
 		cursor: pointer;
 		height: 20;
+		display: inline-block;
 		text-align: center;
 		border-style: solid;
 		border-width: 1px;
@@ -25,6 +40,49 @@
 		font-size: 10pt;
 	}
 }
+@media only screen and (max-device-width: 480px) {
+	div.topbar
+	{
+		-moz-user-select: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-o-user-select: none;
+		unselectable: on;
+		z-index: 15;
+		position:fixed;
+		width: auto;
+		min-width: 500px;
+		height: 35;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 18pt;
+		background-color: rgba(0,0,0,0.7);
+	}
+	div.topspace
+	{
+		width: 100%;
+		height: 35;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 18pt;
+	}
+
+	div.maplink
+	{
+		cursor: pointer;
+		height: 20;
+		display: inline-block;
+		text-align: center;
+		border-style: solid;
+		border-width: 1px;
+		border-radius: 3px;
+		padding-left: 5px;
+		padding-right: 5px;
+		vertical-align: middle;
+		font-family: Verdana, Arial, Helvetica, sans-serif;
+		font-size: 10pt;
+	}
+}
+
 body
 {
 	cursor: crosshair;
@@ -55,9 +113,9 @@ div.topbar
 	unselectable: on;
 	z-index: 15;
 	position:fixed;
-	width: auto;
-	min-width: 500px;
-	height: 45;
+	width: 100%;
+	min-width: 1500px;
+	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	background-color: rgba(0,0,0,0.7);
@@ -65,7 +123,7 @@ div.topbar
 div.topspace
 {
 	width: 100%;
-	height: 45;
+	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
