--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 2) {
 	div.topbar
 	{
 		-moz-user-select: none;
@@ -40,7 +43,10 @@
 		font-size: 10pt;
 	}
 }
-@media only screen and (max-device-width: 480px) {
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 2) {
 	div.topbar
 	{
 		-moz-user-select: none;
