--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ div.topbar
 	position:fixed;
 	width: 100%;
 	min-width: 500px;
-	height: 100%;
+	height: 35px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	background-color: rgba(0,0,0,0.7);
@@ -39,7 +39,7 @@ div.topbar
 div.topspace
 {
 	width: 100%;
-	height: 100%;
+	height: 35px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
