--- a/style.css
+++ b/style.css
@@ -9,29 +9,28 @@ body
 }
 div.content
 {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
 	display: inline-block;
-	position: relative;
 	min-height: 500px;
 }
 div.topbar
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
 	z-index: 15;
 	position:fixed;
 	width: 100%;
-	min-width: 500px;
-	height: 35px;
+	min-width: 1500px;
+	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	background-color: rgba(0,0,0,0.7);
@@ -39,7 +38,7 @@ div.topbar
 div.topspace
 {
 	width: 100%;
-	height: 35px;
+	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
@@ -96,7 +95,7 @@ div.toptitle
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 7pt;
-
+	
 }
 div.topupdatedate
 {
@@ -226,7 +225,7 @@ a:hover
 	top: 35;
 	z-index:8;
 }
-#guilds4{
+guilds4{
 	cursor: crosshair;
 	display: none;
 	position:absolute;
@@ -262,7 +261,7 @@ a:hover
 	top: 35;
 	z-index:4;
 }
-#districts4{
+districts4{
 	display: none;
 	position:absolute;
 	left: 0;
@@ -270,9 +269,9 @@ a:hover
 	z-index:4;
 }
 #tooltiptext{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -280,9 +279,9 @@ a:hover
 	display: inline-block;
 }
 #tooltipControls{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -290,9 +289,9 @@ a:hover
 	display: inline-block;
 }
 #tooltipControlsButtonCycle{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -305,9 +304,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonEnter{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -320,9 +319,9 @@ cursor: pointer;
 	float: left;
 }
 #tooltipControlsButtonCancel{
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -347,9 +346,9 @@ background-repeat: no-repeat;
 
 #overlay
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -365,9 +364,9 @@ background-repeat: no-repeat;
 }
 #overlay2
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -383,9 +382,9 @@ background-repeat: no-repeat;
 }
 #overlay3
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -401,9 +400,9 @@ background-repeat: no-repeat;
 }
 #overlay4
 {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -533,16 +532,15 @@ div.markerUIbuttonGreen
 	cursor: pointer;
 	display: none;
 }
-/*div.content
+div.content 
 {
-	height: 100%;
-  float:left;
-}*/
+float:left;
+}
 
 #sidebar {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -556,9 +554,9 @@ div.markerUIbuttonGreen
 	padding-left: 20px;
 }
 #sidebarMarkerlist {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -569,9 +567,9 @@ div.markerUIbuttonGreen
 	padding-top: 20px;
 }
 #sidebarDestinationTypelist {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -581,9 +579,9 @@ div.markerUIbuttonGreen
 	padding-top: 20px;
 }
 #pathfindingSettings {
--moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
+-moz-user-select: none; 
+	-webkit-user-select: none; 
+	-ms-user-select: none; 
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
@@ -599,7 +597,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003300;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 select.mpcost {
 background-repeat:no-repeat;
@@ -607,7 +605,7 @@ background-position:bottom left;
    border: 1px solid #00FFFF;
    background-color: #003333;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 
 
@@ -618,7 +616,7 @@ background-position:bottom left;
    border: 1px solid #00FF00;
    background-color: #003333;
  	border-radius: 3px;
-   color: white;
+   color: white; 
 }
 #customText {
 	background-color: #333333;
