--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ div.content
 	unselectable: on;
 	display: inline-block;
 	position: fixed;
-	top: auto;
+	top: 60px;
 	min-height: 500px;
 }
 div.topbar
