--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ div.topbar
 	width: 100%;
 	min-width: 1500px;
 	height: 35;
-	max-height: calc(100% - 50px);
-	overflow-y: auto;
+	overflow-y: scroll;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	background-color: rgba(0,0,0,0.7);
