--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ div.topbar
 	width: 100%;
 	min-width: 1500px;
 	height: 35;
+	-webkit-overflow-scrolling: touch;
 	overflow-y: scroll;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
