--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 }
 div.content
 {
--moz-user-select: none;
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
@@ -17,6 +17,10 @@ div.content
 	unselectable: on;
 	display: inline-block;
 	min-height: 500px;
+	/*+placement: 0px 25px;*/
+	position: relative;
+	left: 0px;
+	top: 25px;
 }
 div.topbar
 {
@@ -27,25 +31,21 @@ div.topbar
 	-o-user-select: none;
 	unselectable: on;
 	z-index: 15;
-	position: sticky;
-	top: 10px
+	position: fixed;
 	width: 100%;
-	min-width: 1500px;
-	height: 35;
-	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;
+	min-width: 500px;
+	height: auto;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
-	background-color: rgba(0,0,0,0.7);
+	background-color: rgba(0, 0, 0, 0.7);
 }
 div.topspace
 {
-	width: 100%auto;
+	width: 100%;
 	height: 35;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 }
-
 div.maplink
 {
 	cursor: pointer;
@@ -61,7 +61,6 @@ div.maplink
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 }
-
 div.maplinkHighlight
 {
 	cursor: pointer;
@@ -76,7 +75,7 @@ div.maplinkHighlight
 	vertical-align: middle;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	color: #ffff00;
+	color: #FFFF00;
 }
 div.resourceTypeDestinationButton
 {
@@ -98,7 +97,6 @@ div.toptitle
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 7pt;
-
 }
 div.topupdatedate
 {
@@ -109,7 +107,6 @@ div.topupdatedate
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 8pt;
 }
-
 a:visited
 {
 	color: #FFFFFF;
@@ -126,227 +123,243 @@ a:hover
 {
 	color: #FFFFFF;
 }
-
-#valhalla{
+#valhalla
+{
 	cursor: crosshair;
 	unselectable: on;
 }
-#elysium{
-	cursor: crosshair;
-	unselectable: on;
-	display: none;
-}
-#stygia{
+#elysium
+{
 	cursor: crosshair;
 	unselectable: on;
 	display: none;
 }
-#sewers{
+#stygia
+{
 	cursor: crosshair;
 	unselectable: on;
 	display: none;
 }
-#warrens{
+#sewers
+{
 	cursor: crosshair;
 	unselectable: on;
 	display: none;
 }
-#terraNullius{
+#warrens
+{
 	cursor: crosshair;
 	unselectable: on;
 	display: none;
 }
-#badges0{
+#terraNullius
+{
+	cursor: crosshair;
+	unselectable: on;
+	display: none;
+}
+#badges0
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#badges1{
+#badges1
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:8;
+	top: 35px;
+	z-index: 8;
 }
-#badges2{
+#badges2
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#badges3{
+#badges3
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#badges4{
+#guilds0
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#guilds0{
+#guilds1
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#guilds1{
+#guilds2
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#guilds2{
+#guilds3
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-#guilds3{
+#guilds4
+{
 	cursor: crosshair;
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
 	top: 35;
-	z-index:8;
+	z-index: 8;
 }
-guilds4{
-	cursor: crosshair;
+#districts0
+{
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:8;
+	top: 0px;
+	z-index: 4;
 }
-#districts0{
+#districts1
+{
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:4;
+	z-index: 4;
+	top: 0px;
 }
-#districts1{
+#districts2
+{
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:4;
+	top: 0px;
+	z-index: 4;
 }
-#districts2{
+#districts3
+{
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:4;
+	z-index: 4;
+	top: 0px;
 }
-#districts3{
+#districts4
+{
 	display: none;
-	position:absolute;
+	position: absolute;
 	left: 0;
-	top: 35;
-	z-index:4;
+	top: 0px;
+	z-index: 4;
 }
-districts4{
-	display: none;
-	position:absolute;
-	left: 0;
-	top: 35;
-	z-index:4;
-}
-#tooltiptext{
--moz-user-select: none;
+#tooltiptext
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	vertical-align:top;
+	vertical-align: top;
 	display: inline-block;
 }
-#tooltipControls{
--moz-user-select: none;
+#tooltipControls
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	vertical-align:top;
+	vertical-align: top;
 	display: inline-block;
 }
-#tooltipControlsButtonCycle{
--moz-user-select: none;
+#tooltipControlsButtonCycle
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-cursor: pointer;
+	cursor: pointer;
 	margin: 5px;
 	padding: 2px;
-	border: 1px solid #00ffff;
+	border: 1px solid #00FFFF;
 	background-color: #003333;
 	border-radius: 3px;
 	float: left;
 }
-#tooltipControlsButtonEnter{
--moz-user-select: none;
+#tooltipControlsButtonEnter
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-cursor: pointer;
+	cursor: pointer;
 	margin: 5px;
 	padding: 2px;
-	border: 1px solid #00ff00;
+	border: 1px solid #00FF00;
 	background-color: #003300;
 	border-radius: 3px;
 	float: left;
 }
-#tooltipControlsButtonCancel{
--moz-user-select: none;
+#tooltipControlsButtonCancel
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-cursor: pointer;
+	cursor: pointer;
 	margin: 5px;
 	padding: 2px;
-	border: 1px solid #ff0000;
+	border: 1px solid #FF0000;
 	background-color: #330000;
 	border-radius: 3px;
 	float: left;
 }
-#previewmap{
-margin: 5px;
-margin-left: 20px;
-background: url(mini-valhalla.png);
-background-position: -0px -0px;
-display: inline-block;
-background-repeat: no-repeat;
+#previewmap
+{
+	margin: 5px;
+	margin-left: 20px;
+	background: url(mini-valhalla.png);
+	background-position: 0px 0px;
+	display: inline-block;
+	background-repeat: no-repeat;
 	width: 108;
 	height: 108;
 }
-
 #overlay
 {
 	-moz-user-select: none;
@@ -426,13 +439,13 @@ background-repeat: no-repeat;
 	position: absolute;
 	left: 0px;
 	top: -200px;
-	max-width:500px;
+	max-width: 500px;
 	z-index: 20;
-	border: 1px solid #ffffff;
+	border: 1px solid #FFFFFF;
 	border-radius: 5px;
 	padding: 3px;
-	color: #ffffff;
-	background-color: rgba(0,0,0,0.8)
+	color: #FFFFFF;
+	background-color: rgba(0, 0, 0, 0.8);
 }
 #you
 {
@@ -465,7 +478,7 @@ div.marker
 }
 div.badgeMarker
 {
-display: block;
+	display: block;
 	width: 72px;
 	height: 72px;
 	position: absolute;
@@ -473,7 +486,7 @@ display: block;
 }
 div.guildMarker
 {
-display: block;
+	display: block;
 	width: 72px;
 	height: 72px;
 	position: absolute;
@@ -481,8 +494,7 @@ display: block;
 }
 div.markerinfo
 {
-
-	border: 0px solid #ffffff;
+	border: 0px solid #FFFFFF;
 	border-radius: 5px;
 	margin: 10px;
 	background-color: #000000;
@@ -491,7 +503,7 @@ div.markerinfo
 div.destinationTypeButtons
 {
 	display: inline-block;
-	border: 0px solid #ffffff;
+	border: 0px solid #FFFFFF;
 	border-radius: 5px;
 	margin: 10px;
 	background-color: #000000;
@@ -499,7 +511,7 @@ div.destinationTypeButtons
 }
 div.markerLocationText
 {
-	display:inline-block;
+	display: inline-block;
 }
 div.markerUIbuttonRed
 {
@@ -507,7 +519,7 @@ div.markerUIbuttonRed
 	display: inline-block;
 	padding: 2px;
 	margin-left: 10px;
-	border: 1px solid #ff0000;
+	border: 1px solid #FF0000;
 	background-color: #330000;
 	border-radius: 3px;
 	cursor: pointer;
@@ -529,35 +541,36 @@ div.markerUIbuttonGreen
 	display: inline-block;
 	padding: 2px;
 	margin-left: 10px;
-	border: 1px solid #00ff00;
+	border: 1px solid #00FF00;
 	background-color: #003300;
 	border-radius: 3px;
 	cursor: pointer;
 	display: none;
 }
-div.content
+#sidebar
 {
-float:left;
-}
-
-#sidebar {
--moz-user-select: none;
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	-o-user-select: none;
 	unselectable: on;
-	position:fixed;
+	position: absolute;
 	display: inline-block;
 	height: 200px;
-	min-width: 200px;
+	min-width: 400px;
 	z-index: 7;
 	float: left;
 	background-color: #000000;
 	padding-left: 20px;
+	/*+placement: displace 0px 25px;*/
+	position: absolute;
+	margin-left: 0px;
+	margin-top: 25px;
 }
-#sidebarMarkerlist {
--moz-user-select: none;
+#sidebarMarkerlist
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
@@ -569,8 +582,9 @@ float:left;
 	background-color: #000000;
 	padding-top: 20px;
 }
-#sidebarDestinationTypelist {
--moz-user-select: none;
+#sidebarDestinationTypelist
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
@@ -581,8 +595,9 @@ float:left;
 	background-color: #000000;
 	padding-top: 20px;
 }
-#pathfindingSettings {
--moz-user-select: none;
+#pathfindingSettings
+{
+	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
@@ -594,33 +609,34 @@ float:left;
 	padding-top: 20px;
 	padding-top: 20px;
 }
-select {
-background-repeat:no-repeat;
-background-position:bottom left;
-   border: 1px solid #00FF00;
-   background-color: #003300;
- 	border-radius: 3px;
-   color: white;
+select
+{
+	background-repeat: no-repeat;
+	background-position: bottom left;
+	border: 1px solid #00FF00;
+	background-color: #003300;
+	border-radius: 3px;
+	color: white;
 }
-select.mpcost {
-background-repeat:no-repeat;
-background-position:bottom left;
-   border: 1px solid #00FFFF;
-   background-color: #003333;
- 	border-radius: 3px;
-   color: white;
+select.mpcost
+{
+	background-repeat: no-repeat;
+	background-position: bottom left;
+	border: 1px solid #00FFFF;
+	background-color: #003333;
+	border-radius: 3px;
+	color: white;
 }
-
-
-
-input {
-background-repeat:no-repeat;
-background-position:bottom left;
-   border: 1px solid #00FF00;
-   background-color: #003333;
- 	border-radius: 3px;
-   color: white;
+input
+{
+	background-repeat: no-repeat;
+	background-position: bottom left;
+	border: 1px solid #00FF00;
+	background-color: #003333;
+	border-radius: 3px;
+	color: white;
 }
-#customText {
+#customText
+{
 	background-color: #333333;
 }
