--- a/test.css
+++ b/test.css
@@ -25,7 +25,7 @@ body
 	position: fixed;
 	width: auto;
 	min-width: 500px;
-	height: 45;
+	height: auto;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 18pt;
 	background-color: rgba(0,0,0,0.7);
