Changes to pointer

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-	cursor: crosshair;
+	cursor: pointer;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 8pt;
 	margin: 0px;
