--- a/profileStyle.css
+++ b/profileStyle.css
@@ -15,6 +15,24 @@ body {
   margin:5px;
 }
 
+.submit {
+  cursor: pointer;
+  color: #FFFFFF;
+  float: left;
+  margin: 5px;
+  height: 20;
+	display: inline-block;
+	text-align: center;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 3px;
+	padding-left: 5px;
+	padding-right: 5px;
+	vertical-align: middle;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 10pt;
+}
+
 .staticBar input {
   color: #000000;
   float:left;
